use Bootstrap CSS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,9 @@
 #items { float: left; width: 25% }
 #item-list { list-style-type: none; padding: 0; margin: none }
 
-.cover { width: 150px }
-
+.item .icon { margin-right: 100px }
+.item { color: #000 }
+.cover { width: 150px; margin: auto }
 .title { font-weight: bold; font-size: 110% }
 .author { font-style: italic; font-size: 100% }
 .date { font-size: 90% }
