--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,20 @@
 	-o-hyphens: auto;
 	hyphens: auto;
 }
+
+.item { width: 100% }
+
 .item .icon { font-size: 150px; padding-right: 100px }
 .item { color: #000 }
-.cover { width: 150px; margin: auto }
+.cover { width: 150px  }
 .title { font-weight: bold; font-size: 110% }
 .author { font-style: italic; font-size: 100% }
 .date { font-size: 90% }
+
+#doc { position: fixed; left: 25%; width: 75%; height: 100% }
+#doc iframe {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
