--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 #category { padding-left: 20px }
 
 /* document (for pdfjs) should take up entire page */
-#doc { position: fixed; left: 0%; width: 100%; height: 100% }
+#doc { left: 0%; width: 100%; height: 100% }
 #doc iframe {
     display: block;
     width: 100%;
